@@ -15,6 +15,11 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
 -------------------------------------------------------------------------
 
+25 November 2014 Gunter Folger                     (test22-V10-00-01)
+---------------------------------------------------------------------
+CMakeLists.txt: set policy CMP0042 to OLD, avoid warning on Mac with recent
+CMake concerning new @rpath default.
+
 11 October 2014 Makoto Asai                        (test22-V10-00-00)
 ---------------------------------------------------------------------
 FTFtest1.icc and FTFtest4.icc - replace obsolete G4ParticleTable::GetIon()
